[gd_scene load_steps=6 format=3 uid="uid://davx6xri0n0vt"]

[ext_resource type="Script" uid="uid://bt47480nh31yn" path="res://dot gds/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cqexju0dcbsij" path="res://dot gds/PlayerMovement.gd" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://chx8k2542vhd2" path="res://dot gds/PlayerCombat.gd" id="3_6t5aa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3pqv"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_4flbx")
health_regen_rate = 0.0
knockback_force = 6.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_onrkg")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("SphereShape3D_i3pqv")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_cvnsp")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("3_6t5aa")

[node name="WeaponAttachPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.616077, 0.0548823, -0.000475287)
